--- a/frontend/app.css
+++ b/frontend/app.css
@@ -1,10 +1,15 @@
 body {
   margin: 0;
   font-family: 'Megrim', cursive;
+  color: white;
 }
 
 h1 {
   margin: 0;
+}
+
+ul {
+  padding: 0;
 }
 
 .emphasis {
@@ -13,12 +18,14 @@ h1 {
 }
 
 .header {
+  background-color: #363062;
   display: flex;
   justify-content: center;
 }
 
 .todo {
   align-items: center;
+  background-color: #4d4c7d;
   display: flex;
   justify-content: space-between;
   padding: 30px;
