input to add todo

--- a/frontend/app.css
+++ b/frontend/app.css
@@ -1,7 +1,8 @@
 body {
-  margin: 0;
-  font-family: 'Megrim', cursive;
+  background-color: #363062;
   color: white;
+  font-family: 'Megrim', cursive;
+  margin: 0;
 }
 
 h1 {
@@ -10,6 +11,22 @@ h1 {
 
 ul {
   padding: 0;
+  margin: 0;
+}
+
+.add-todo-container {
+  display: flex;
+}
+
+.add-todo-input {
+  font-size: 2em;
+  padding: 40px;
+  width: 60%;
+}
+
+.add-todo-btn {
+  font-size: 2.3em;
+  width: 40%;
 }
 
 .emphasis {
@@ -18,17 +35,12 @@ ul {
 }
 
 .header {
-  background-color: #363062;
   display: flex;
   justify-content: center;
 }
 
-.todo {
-  align-items: center;
-  background-color: #4d4c7d;
-  display: flex;
-  justify-content: space-between;
-  padding: 30px;
+.left {
+  margin-left: 16px;
 }
 
 .title-todo {
@@ -38,6 +50,10 @@ ul {
   list-style: none;
 }
 
-.left {
-  margin-left: 16px;
+.todo {
+  align-items: center;
+  background-color: #4d4c7d;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
 }
